# genEcoli

./: .gitignore  README.md  pyproject.toml  tests.py
genEcoli/: __init__.py  infer.py  interface.py  schemas.py
genEcoli/types/: register.py
