[project]
name = "genecoli"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "bigraph-schema>=0.0.60",
    "process-bigraph>=0.0.38",
    "vEcoli[dev]>=1.1.0",
    "vivarium-core>=1.6.5",
    "plum-dispatch>=2.5"
]

[tool.setuptools]
packages = [
    "genEcoli"
]

[tool.uv.sources]
vecoli = { path = "../vEcoli", editable = true }
process-bigraph = { path = "../process-bigraph", editable = true }
bigraph-schema = { path = "../bigraph-schema", editable = true }
